// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MediaCardItem matches snapshot 1`] = `
<v-list-item-stub
  activeclass=""
  selectable="true"
  tag="div"
  threeline="true"
>
  <mediacarditemavatar-stub
    size="80"
  />
    
  <v-list-item-content-stub>
    <mediacarditemoverline-stub />
     
    <mediacarditemtitle-stub />
     
    <mediacarditemsubtitle-stub />
     
    <mediacarditemdescription-stub />
  </v-list-item-content-stub>
</v-list-item-stub>
`;

exports[`MediaCardItem matches snapshot 2`] = `
<v-list-item-stub
  activeclass=""
  selectable="true"
  tag="div"
  threeline="true"
>
  <mediacarditemavatar-stub
    media="[object Object]"
    size="80"
  />
    
  <v-list-item-content-stub>
    <mediacarditemoverline-stub
      media="[object Object]"
    />
     
    <mediacarditemtitle-stub
      media="[object Object]"
    />
     
    <mediacarditemsubtitle-stub
      media="[object Object]"
    />
     
    <mediacarditemdescription-stub
      media="[object Object]"
    />
  </v-list-item-content-stub>
</v-list-item-stub>
`;
